# SmallCodes

./: README.md
cpp/Examples/: auth_client.cpp  bin_parser.cpp  circ_buffer.cpp  event_dispatcher.cpp  factory.cpp  ffi_raii_inference_handle.cpp  file_int_iter.cpp  image_processing.cpp  oauth2_no_pkce.cpp  packet_receiver.cpp  packet_receiver.hpp  request_queue.cpp  singleton.cpp  thread_pool.cpp  thread_watchdog.cpp  user.proto  windows_com_map_smb.cpp  windows_map_smb.cpp  windows_service.cpp
cpp/Refreshers/: 00_basic_types.cpp  01_conditionals_and_loops.cpp  02_storage_and_operators.cpp  03_functions.cpp  04_pointer_basics.cpp  05_compilation.cpp  06_includes_and_namespaces.cpp  07_value_categories.cpp  08_containers.cpp  09_move_and_copyelision.cpp  10_modern_cpp.cpp  11_templates.cpp  12_modern_utilities.cpp  13_smart_pointers.cpp  14_threads.cpp  15_async.cpp  16_classes.cpp  17_advanced_oop.cpp  18_solid.cpp  19_posix_apis.cpp  20_windows_apis.cpp  21_system_calls.cpp  22_network_ipc.cpp  23_advanced_templates.cpp  24_exceptions.cpp  25_testing.cpp  26_design_patterns.cpp  27_perf_optimization.cpp  28_ffi_and_good_practices.cpp  29_low_level.cpp  _cpp_review.cpp  generic_cont.cpp  lambda.cpp  move.cpp  observer.cpp  proto.cpp  (+8 more)
other/rust_cpp_ffi/_play/act/: Cargo.toml  main
other/rust_cpp_ffi/_play/act/src/: main.rs
python/: .gitignore  collection.py  concurrency.py  ctypes.py  file.py  file.txt  logs.py  pytest.py  test.py  tests2.py
rust/: .gitignore
rust/samples/play/: Cargo.toml
rust/samples/play/src/: dp_main.rs  gpt_main.rs  main.rs  zip_proc.rs
(+195 files in other folders)
