[package]
name = "play"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
reqwest = { version = "0.12.26", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full", "macros", "rt-multi-thread", "time"] }
serde_json = "1.0"
