[package]
name = "act"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
chrono = "0.4.42"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
reqwest = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.49.0", features = ["full"] }
zip = "7.0.0"
